<Refactor> Thiet Lap Test Package